Added Abandoned Cart notification email send feature Imported from Changeset 2605

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -899,6 +899,10 @@
     <Compile Include="Migrations\202006071441185_adding-Selector-column-to-UISettingItems-table.designer.cs">
       <DependentUpon>202006071441185_adding-Selector-column-to-UISettingItems-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006241332071_Added-abandoned-cart-notification-related-tables.cs" />
+    <Compile Include="Migrations\202006241332071_Added-abandoned-cart-notification-related-tables.designer.cs">
+      <DependentUpon>202006241332071_Added-abandoned-cart-notification-related-tables.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1893,6 +1897,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006071441185_adding-Selector-column-to-UISettingItems-table.resx">
       <DependentUpon>202006071441185_adding-Selector-column-to-UISettingItems-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006241332071_Added-abandoned-cart-notification-related-tables.resx">
+      <DependentUpon>202006241332071_Added-abandoned-cart-notification-related-tables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
