--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -612,7 +612,7 @@
     <Content Include="fonts\Pe-icon-7-stroke.ttf" />
     <Content Include="fonts\Pe-icon-7-stroke.woff" />
     <Content Include="Scripts\Gane.Settings-Bar.js" />
-    <Content Include="Scripts\javascript-kitproducts.js" />
+    <Content Include="Scripts\javascript-kit-product.js" />
     <Content Include="Scripts\javascript-product-by-attribute.js" />
     <Content Include="Scripts\jquery.modal-wizard.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
@@ -1386,7 +1386,7 @@
     <Content Include="Views\Theme\University\Shared\_UserMenuPartial.cshtml" />
     <Content Include="Views\Theme\University\Shared\_AccountSideBar.cshtml" />
     <Content Include="Views\Theme\University\Products\_KitProductAttributeDetail.cshtml" />
-    <Content Include="Views\Theme\University\Shared\_BootStrapWizardModal.cshtml" />
+    <Content Include="Views\Theme\University\Shared\_KitProductChildsSelectorWizardModal.cshtml" />
     <Content Include="Views\Theme\University\Products\_ProductByAttributeSelector.cshtml" />
     <Content Include="Views\Theme\University\Shared\_ProductByAttributeSelectorModal.cshtml" />
   </ItemGroup>
