--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -915,6 +915,10 @@
     <Compile Include="Migrations\202006301522512_cartId-added-in-kitProductItem.designer.cs">
       <DependentUpon>202006301522512_cartId-added-in-kitProductItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006301732048_added-description-to-WebsiteShippingRules-table.cs" />
+    <Compile Include="Migrations\202006301732048_added-description-to-WebsiteShippingRules-table.designer.cs">
+      <DependentUpon>202006301732048_added-description-to-WebsiteShippingRules-table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1921,6 +1925,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006301522512_cartId-added-in-kitProductItem.resx">
       <DependentUpon>202006301522512_cartId-added-in-kitProductItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006301732048_added-description-to-WebsiteShippingRules-table.resx">
+      <DependentUpon>202006301732048_added-description-to-WebsiteShippingRules-table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
