--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -1390,6 +1390,7 @@
     <Content Include="Views\Theme\University\Products\_ProductByAttributeSelector.cshtml" />
     <Content Include="Views\Theme\University\Shared\_ProductByAttributeSelectorModal.cshtml" />
     <Content Include="Views\Theme\University\Orders\_AddOrEditAddress.cshtml" />
+    <Content Include="Views\Theme\University\Orders\SagePay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
