--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
-	For more information on how to configure your ASP.NET application, please visit
-	https://go.microsoft.com/fwlink/?LinkId=301880
-	-->
+  For more information on how to configure your ASP.NET application, please visit
+  https://go.microsoft.com/fwlink/?LinkId=301880
+  -->
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -18,13 +18,13 @@
     <!-- connection strings for AZURE -->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient"    connectionString="Data Source=l43zbffach.database.windows.net,1433;Initial Catalog=HiveLiveMaster_v3;Integrated Security=False;User Id=wmsadmin;Password=admin123!;Timeout=0;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
     <!--connection strings for Sattar Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for GDSVR2-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=GaneIntranet;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=UniversityTest; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=UniversityTest; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
     <!--Start connection string UMER PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Initial Catalog=GaneIntranet 1.2120; Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />-->
     <!--Start connection string UMER Laptop-->
@@ -66,24 +66,24 @@
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
   </appSettings>
   <!--
-		For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-		The following attributes can be set on the <httpRuntime> tag.
-			<system.Web>
-				<httpRuntime targetFramework="4.7.2" />
-			</system.Web>
-	-->
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.7.2" />
+      </system.Web>
+  -->
   <system.web>
     <trust level="Full" />
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />-->
     <!--Start session string Development-Laptop-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--End session string Development-Laptop-->
     <!--Start session string Sattar Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP3;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--End session string Sattar Laptop-->
     <!--Start session string Naveed PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />
     <!--End session string Naveed PC-->
     <!--Start session string UMER PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
@@ -155,14 +155,14 @@
           <action type="Rewrite" url="{URL}" />
         </rule>
         <!--<rule name="HTTP to HTTPS redirect" stopProcessing="true">
-					<match url="(.*)" />
-					<conditions logicalGrouping="MatchAll">
-						<add input="{REQUEST_URI}" pattern="iisstart" negate="true" />
-						<add input="{REQUEST_URI}" pattern="/iclock/" negate="true" />
-						<add input="{HTTPS}" pattern="off" />
-					</conditions>
-					<action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
-				</rule>-->
+          <match url="(.*)" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_URI}" pattern="iisstart" negate="true" />
+            <add input="{REQUEST_URI}" pattern="/iclock/" negate="true" />
+            <add input="{HTTPS}" pattern="off" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+        </rule>-->
       </rules>
     </rewrite>
     <!--END HTTP to HTTPS redirect using URL Rewrite-->
