--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -1391,6 +1391,7 @@
     <Content Include="Views\Theme\University\Shared\_ProductByAttributeSelectorModal.cshtml" />
     <Content Include="Views\Theme\University\Orders\_AddOrEditAddress.cshtml" />
     <Content Include="Views\Theme\University\Orders\SagePay.cshtml" />
+    <Content Include="Views\Theme\University\UISettings\SettingsBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
