--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -271,7 +271,9 @@
     <Compile Include="Helpers\LayoutHelpers.cs" />
     <Compile Include="Models\DemoBooking.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AccountDetailViewModel.cs" />
     <Compile Include="ViewModels\ProductDetailViewModel.cs" />
+    <Compile Include="ViewModels\UsersViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\settings-bar.css" />
@@ -1308,9 +1310,7 @@
     <Content Include="Views\Theme\Smart\Products\AddToCart.cshtml" />
     <Content Include="Views\Theme\Smart\Shared\_CartItemsPartial.cshtml" />
     <Content Include="Views\Theme\Smart\User\Create.cshtml" />
-    <Content Include="Views\Theme\Smart\Orders\GetAddress.cshtml" />
     <Content Include="Views\Theme\Smart\Orders\ConfirmOrder.cshtml" />
-    <Content Include="Views\Theme\Smart\Orders\AddShippingMethod.cshtml" />
     <Content Include="Views\Theme\Smart\Orders\PaymentInfo.cshtml" />
     <Content Include="Views\Theme\Smart\Test\Index.cshtml" />
     <Content Include="Views\Theme\Smart\Test\IPN.cshtml" />
@@ -1363,9 +1363,8 @@
     <Content Include="Views\Theme\University\Home\page.cshtml" />
     <Content Include="Views\Theme\University\Shared\_DeliveryInfoPartial.cshtml" />
     <Content Include="Views\Theme\University\Shared\_HorizontalNavbarPartial.cshtml" />
-    <Content Include="Views\Theme\University\Orders\AddShippingMethod.cshtml" />
     <Content Include="Views\Theme\University\Orders\ConfirmOrder.cshtml" />
-    <Content Include="Views\Theme\University\Orders\GetAddress.cshtml" />
+    <Content Include="Views\Theme\University\Orders\Checkout.cshtml" />
     <Content Include="Views\Theme\University\Orders\PaymentInfo.cshtml" />
     <Content Include="Views\Theme\University\User\Account.cshtml" />
     <Content Include="Views\Theme\University\User\Create.cshtml" />
@@ -1393,6 +1392,24 @@
     <Content Include="Views\Theme\University\Orders\SagePay.cshtml" />
     <Content Include="Views\Theme\University\UISettings\SettingsBar.cshtml" />
     <Content Include="Views\Theme\University\Orders\_AddressDetail.cshtml" />
+    <Content Include="Views\Theme\University\Orders\_BillingAddress.cshtml" />
+    <Content Include="Views\Theme\University\Orders\_ShippingAddress.cshtml" />
+    <Content Include="Views\Theme\University\Orders\_DeliveryMethod.cshtml" />
+    <Content Include="Views\Theme\University\Orders\_CollectionPoint.cshtml" />
+    <Content Include="Views\Theme\University\Orders\_ShipmentRule.cshtml" />
+    <Content Include="Views\Theme\University\Orders\_PaymentMethod.cshtml" />
+    <Content Include="Views\Theme\University\Orders\_CheckoutProgressBar.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\Checkout.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\SagePay.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_AddOrEditAddress.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_AddressDetail.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_BillingAddress.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_CheckoutProgressBar.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_CollectionPoint.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_DeliveryMethod.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_PaymentMethod.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_ShipmentRule.cshtml" />
+    <Content Include="Views\Theme\Smart\Orders\_ShippingAddress.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
