dynamic delivery info navbar added Imported from Changeset 2669

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -935,6 +935,10 @@
     <Compile Include="Migrations\202007071455247_added-WebsiteLayoutSettings-table.designer.cs">
       <DependentUpon>202007071455247_added-WebsiteLayoutSettings-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007072009467_added-websitedeliveryNavigation.cs" />
+    <Compile Include="Migrations\202007072009467_added-websitedeliveryNavigation.designer.cs">
+      <DependentUpon>202007072009467_added-websitedeliveryNavigation.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1956,6 +1960,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007071455247_added-WebsiteLayoutSettings-table.resx">
       <DependentUpon>202007071455247_added-WebsiteLayoutSettings-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007072009467_added-websitedeliveryNavigation.resx">
+      <DependentUpon>202007072009467_added-websitedeliveryNavigation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
