--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2710,6 +2710,7 @@
     <Content Include="Views\Theme\Default\WebsiteDeliveryNavigations\Create.cshtml" />
     <Content Include="Views\Theme\Default\WebsiteDeliveryNavigations\_WebSiteDeliveryNavigationList.cshtml" />
     <Content Include="Views\Theme\Default\WebsiteDeliveryNavigations\Edit.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\_Uploader.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
