Payment Related Fixes + bug / style fixes Imported from Changeset 2685

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -1390,8 +1390,7 @@
     <Content Include="Views\Theme\University\Products\_ProductByAttributeSelector.cshtml" />
     <Content Include="Views\Theme\University\Shared\_ProductByAttributeSelectorModal.cshtml" />
     <Content Include="Views\Theme\University\Orders\_AddOrEditAddress.cshtml" />
-    <Content Include="Views\Theme\University\Orders\SagePay.cshtml" />
-    <Content Include="Views\Theme\University\UISettings\SettingsBar.cshtml" />
+    <Content Include="Views\Theme\University\Orders\SagePay3DAuth.cshtml" />
     <Content Include="Views\Theme\University\Orders\_AddressDetail.cshtml" />
     <Content Include="Views\Theme\University\Orders\_BillingAddress.cshtml" />
     <Content Include="Views\Theme\University\Orders\_ShippingAddress.cshtml" />
@@ -1413,6 +1412,7 @@
     <Content Include="Views\Theme\Smart\Orders\_ShippingAddress.cshtml" />
     <Content Include="Views\Theme\University\Orders\ConfirmPaymentMessage.cshtml" />
     <Content Include="Views\Theme\University\Orders\_CheckoutProcessPartial.cshtml" />
+    <Content Include="Views\Theme\University\Orders\SagePay - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
