sage and paypal payment and create order is done Imported from Changeset 2706

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -132,9 +132,10 @@
     <!--Start session string Sattar-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP3;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Naveed PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
+
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />
     <!--Start session string UMER PC-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string UMER Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=HAIER-PC;Integrated Security=true;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string Sami PC-->
