--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -1418,6 +1418,7 @@
     <Content Include="Views\Theme\University\Orders\_CheckoutProcessPartial.cshtml" />
     <Content Include="Views\Theme\University\Shared\_CollectionPointSelector.cshtml" />
     <Content Include="Views\Theme\University\Shared\_ShippingAddressSelector.cshtml" />
+    <Content Include="Views\Theme\University\Orders\PayPal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
