--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -84,11 +84,9 @@
     <!--End session string Sattar Laptop-->
     <!--Start session string Naveed PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
-
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />
     <!--End session string Naveed PC-->
     <!--Start session string UMER PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />
     <!--Start session string UMER Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=HAIER-PC;Integrated Security=true;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string Sami PC-->
